kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sgo
  labels:
    app: k8sgo
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: k8sgo
  type: ClusterIP
