kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sgo
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: api.tryiris.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8sgo
            port:
              number: 80
